--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=3040
 NODE_ENV=users
 # MongoDb Connection
-MONGO_URL = mongodb+srv://birimajanswordpress:y1KCLbO0lrxufCjH@birimajans.g7sheo6.mongodb.net/birim
+MONGO_URL = mongodb+srv://birimajanswordpress:y1KCLbO0lrxufCjH@birimajans.g7sheo6.mongodb.net/mikailburakaydin 
 #JSON web token
 
 JWT_SECRET = 21HS88AJDG76Hh3dsaj3.1dsDHS5gjsd0B11g889sF1FFd.
@@ -26,4 +26,3 @@ SMTP_PORT=587
 SMTP_USER=birimajansaver@gmail.com
 
 SMTP_PASS=tuyz qvhq ksix xgoq
-
